Added preview link

--- a/Products/Adventure.html
+++ b/Products/Adventure.html
@@ -53,8 +53,8 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="https://books.google.ro/books?id=0QE3BAAAQBAJ&lpg=PP1&dq=The%20Nightingale%20book%20preview&pg=PP1&output=embed" title="Preview here" style="width: 150px">Preview here</a>
-                        <a>The Nightingale</a>
+                        <a href="https://books.google.ro/books?id=0QE3BAAAQBAJ&lpg=PP1&dq=The%20Nightingale%20book%20preview&pg=PP1&output=embed" title="Preview here" style="width: 150px">Preview here<br></a>
+                        <p class="name">The Nightingale</p>
                         <p>Kristin Hannah</p>
                     </div>
                 </div>
@@ -65,7 +65,8 @@
                     </a>
                     <div class="title">
                         <div class="narrow">
-                            <a href="https://books.google.ro/books?id=FFbCOxkzQ7cC&lpg=PP1&dq=Alice's%20adventure%20in%20wonderland&pg=PP1&output=embed" title="Alice's adventure in wonderland" style="width: 150px">Alice's adventure in wonderland</a>
+                            <a href="https://books.google.ro/books?id=FFbCOxkzQ7cC&lpg=PP1&dq=Alice's%20adventure%20in%20wonderland&pg=PP1&output=embed" title="Preview here" style="width: 150px">Preview here</a>
+                            <p class="name">Alice's adventure in wonderland</p>
                             <p>Lewis Carroll</p>                    
                         </div>
                     </div>
@@ -77,7 +78,8 @@
                     </a>
                     <div class="title">
                         <div class="narrow">
-                            <a href="https://books.google.ro/books?id=pgvqsaYvgacC&lpg=PP1&dq=All%20quiet%20on%20the%20western%20front&pg=PP1&output=embed" title="All quiet on the western front" style="width: 150px">All quiet on the western front</a>
+                            <a href="https://books.google.ro/books?id=pgvqsaYvgacC&lpg=PP1&dq=All%20quiet%20on%20the%20western%20front&pg=PP1&output=embed" title="Preview here" style="width: 150px">Preview here</a>
+                            <p class="name">All quiet on the western front</p>
                             <p>Maria Remarque</p>
                         </div>
                     </div>
@@ -89,7 +91,8 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="https://books.google.ro/books?id=DLx5DQAAQBAJ&lpg=PT221&dq=Anne%20of%20green%20gables&pg=PP1&output=embed" title="Anne of green gables" style="width: 150px">Anne of green gables</a>
+                        <a href="https://books.google.ro/books?id=DLx5DQAAQBAJ&lpg=PT221&dq=Anne%20of%20green%20gables&pg=PP1&output=embed" title="Preview here" style="width: 150px">Preview here</a>
+                        <p class="name">Anne of green gables</p>
                         <p>Lucy Maud Montgomery</p>
                     </div>
                 </div>
@@ -101,7 +104,8 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="https://books.google.ro/books?id=emISbmWjamwC&lpg=PP1&dq=Gulliver's%20travels&pg=PA1&output=embed" title="Gulliver's travels" style="width: 150px">Gulliver's travels</a>
+                        <a href="https://books.google.ro/books?id=emISbmWjamwC&lpg=PP1&dq=Gulliver's%20travels&pg=PA1&output=embed" title="Preview here" style="width: 150px">Preview here</a>
+                        <p class="name">Gulliver's travels</p>
                         <p>Jonathan Swift</p>
                     </div>
                 </div>
@@ -113,7 +117,8 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="https://books.google.ro/books?id=nwFVDwAAQBAJ&lpg=PP1&dq=Kingdom%20of%20copper&pg=PP1&output=embed" title="Kigdon of copper" style="width: 150px">Kingdon of copper</a>
+                        <a href="https://books.google.ro/books?id=nwFVDwAAQBAJ&lpg=PP1&dq=Kingdom%20of%20copper&pg=PP1&output=embed" title="Preview here" style="width: 150px">Preview here</a>
+                        <p class="name">Kingdom of copper</p>
                         <p> S.A. Chakraborty</p>
                     </div>
                 </div>
@@ -125,7 +130,8 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="https://books.google.ro/books?id=T3JxuhuhlUwC&lpg=PR24&dq=The%20secret%20garden&pg=PR24&output=embed" title="The secret garden" style="width: 150px">The secret garden</a>
+                        <a href="https://books.google.ro/books?id=T3JxuhuhlUwC&lpg=PR24&dq=The%20secret%20garden&pg=PR24&output=embed" title="Preview here" style="width: 150px">Preview here</a>
+                        <p class="name">The secret garden</p>
                         <p>Francess Burnett</p>
                     </div>
                 </div>
@@ -137,7 +143,8 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="https://books.google.ro/books?id=XmBkxTMUvoQC&lpg=PP1&dq=Twelfth%20night&pg=PP1&output=embed" title="Twelfth night" style="width: 150px">Twelfth night</a>
+                        <a href="https://books.google.ro/books?id=XmBkxTMUvoQC&lpg=PP1&dq=Twelfth%20night&pg=PP1&output=embed" title="Preview here" style="width: 150px">Preview here</a>
+                        <p class="name">Twelfth night</p>
                         <p>William Shakespeare</p>
                     </div>
                 </div>
@@ -149,7 +156,8 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="https://books.google.ro/books?id=T7VFDwAAQBAJ&lpg=PP1&dq=War%20of%20the%20wolf&pg=PP1&output=embed" title="War of the wolf" style="width: 150px">War of the wolf</a>
+                        <a href="https://books.google.ro/books?id=T7VFDwAAQBAJ&lpg=PP1&dq=War%20of%20the%20wolf&pg=PP1&output=embed" title="Preview here" style="width: 150px">Preview here</a>
+                        <p class="name">War of the wolf</p>
                         <p>Bernard Cornwell</p>
                     </div>
                 </div>
@@ -161,7 +169,8 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="https://books.google.ro/books?id=ZbsPom3FTjUC&lpg=PP1&dq=World%20without%20end&pg=PP1&output=embed" title="World without end" style="width: 150px">World without end</a>
+                        <a href="https://books.google.ro/books?id=ZbsPom3FTjUC&lpg=PP1&dq=World%20without%20end&pg=PP1&output=embed" title="Preview here" style="width: 150px">Preview here</a>
+                        <p class="name">World without end</p>
                         <p>Ken Follett</p>
                     </div>
                 </div>
