--- a/Products/Science.html
+++ b/Products/Science.html
@@ -44,7 +44,7 @@
 </div>
 
 <div id='main' class="main body" >
-    <h1>Fiction</h1>
+    <h1>Science</h1>
     <div class="carousel active">
         <ul>
             <li class="vsep">
@@ -53,7 +53,8 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="12 Rules for life" style="width: 150px">12 Rules for life</a>
+                        <a href="https://books.google.ro/books?id=TvEqDAAAQBAJ&lpg=PP1&dq=12%20Rules%20for%20life&pg=PR3&output=embed" title="Preview here" style="width: 150px">Preview here</a>
+                        <p class="name">12 Rules for life</p>
                         <p>Jordan B Peterson</p>
                     </div>
                 </div>
@@ -64,7 +65,8 @@
                     </a>
                     <div class="title">
                         <div class="narrow">
-                            <a href="#" title="Behave" style="width: 150px">Behave</a>
+                            <a href="https://books.google.ro/books?id=sJKoDAAAQBAJ&lpg=PP1&dq=Behave&pg=PP1&output=embed" title="Preview here" style="width: 150px">Preview here</a>
+                            <p class="name">Behave</p>
                             <p>Robert M Sapolsky</p>                    
                         </div>
                     </div>
@@ -76,7 +78,8 @@
                     </a>
                     <div class="title">
                         <div class="narrow">
-                            <a href="#" title="Educated" style="width: 150px">Educated</a>
+                            <a href="https://books.google.ro/books?id=2ObWDgAAQBAJ&lpg=PP1&dq=Educated&pg=PP1&output=embed" title="Preview here" style="width: 150px">Preview here</a>
+                            <p class="name">Educated</p>
                             <p>Tara Westover</p>
                         </div>
                     </div>
@@ -88,7 +91,8 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="Factfulness" style="width: 150px">Factfulness</a>
+                        <a href="https://books.google.ro/books?id=j-4yDwAAQBAJ&lpg=PP1&dq=Factfulness&pg=PP1&output=embed" title="Preview here" style="width: 150px">Preview here</a>
+                        <p class="name">Factfulness</p>
                         <p>Hans Rosling</p>
                     </div>
                 </div>
@@ -100,7 +104,8 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="Homo deus" style="width: 150px">Homoe deus</a>
+                        <a href="https://books.google.ro/books?id=H2t_CwAAQBAJ&lpg=PP1&dq=Homoe%20deus&pg=PP1&output=embed" title="Preview here" style="width: 150px">Preview here</a>
+                        <p class="name">Homoe deus</p>
                         <p>Yuval Noah Harari</p>
                     </div>
                 </div>
@@ -112,7 +117,8 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="Man's search for meaning" style="width: 150px">Man's search for meaning</a>
+                        <a href="https://books.google.ro/books?id=W3q8R4dRZTwC&lpg=PP1&dq=Man's%20search%20for%20meaning&pg=PP1&output=embed" title="Preview here" style="width: 150px">Preview here</a>
+                        <p class="name">Man's search for meaning</p>
                         <p>Viktor E. Frankl</p>
                     </div>
                 </div>
@@ -124,8 +130,9 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="Milk and honey" style="width: 150px">Milk and honey</a>
-                        <p>Heather Morris</p>
+                        <a href="https://books.google.ro/books?id=WoWfCgAAQBAJ&lpg=PT196&dq=milk%20and%20honey&pg=PT196&output=embed" title="Preview here" style="width: 150px">Preview here</a>
+                        <p class="name">Milk and honey</p>
+                        <p>Rupi Kaur</p>
                     </div>
                 </div>
             </li>
@@ -136,7 +143,8 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="Sapiens" style="width: 150px">Sapiens</a>
+                        <a href="https://books.google.ro/books?id=FmyBAwAAQBAJ&lpg=PP1&dq=Sapiens&pg=PP1&output=embed" title="Preview here" style="width: 150px">Preview here</a>
+                        <p class="name">Sapiens</p>
                         <p>Yuval Noah Harari</p>
                     </div>
                 </div>
@@ -148,7 +156,8 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="Thinking fast and slow" style="width: 150px">Thinking fast and slow</a>
+                        <a href="https://books.google.ro/books?id=ZuKTvERuPG8C&lpg=PP1&dq=Thinking%20fast%20and%20slow&pg=PP1&output=embed" title="Preview here" style="width: 150px">Preview here</a>
+                        <p class="name">Thinking fast and slow</p>
                         <p>Daniel Kahneman</p>
                     </div>
                 </div>
